Update changelogs and reprocess HD and base packages

--- a/doc/release/CHANGELOG.txt
+++ b/doc/release/CHANGELOG.txt
@@ -84,3 +84,4 @@
 - Fixed DOS Lander border not erasing when returning to orbit
 - HD: Fixed the borders of various dialog boxes
 - HD: Fixed bevel inconsistencies for the 3DO pictograph menu
+- HD: Fixed "Fuel Range at Destination" indicator when in HyperSpace
