--- a/app/composeApp/src/androidMain/res/values/strings.xml
+++ b/app/composeApp/src/androidMain/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">UQM-MegaMod</string>
+    <string name="app_name">The Ur-Quan Masters HD MegaMod</string>
 </resources>
